--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.12.2",
     "firebase": "^11.2.0",
     "next": "^14.0.4",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
