--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@ant-design/nextjs-registry": "^1.0.2",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/supabase-js": "^2.39.1",
+    "@tailwindcss/postcss": "^4.1.7",
     "antd": "^5.12.2",
     "firebase": "^11.2.0",
+    "lucide-react": "^0.511.0",
     "next": "^14.0.4",
     "pdf-lib": "^1.17.1",
     "rc-virtual-list": "^3.18.2",
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "@types/react": "19.0.7",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
     "typescript": "5.7.3"
   }
 }
